resolve responsiveness on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 html {
   min-height: 100%;
   font-family: "Montserrat", sans-serif;
-  font-size: 80%;
+  font-size: 62.5%;
   color: var(--text-1);
   font-weight: 600;
   letter-spacing: 0.1rem;
@@ -30,13 +30,13 @@ html {
 
 .page-container {
   max-width: 100%;
-  height: 100vh;
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   overflow: scroll;
+  position: relative;
 }
 html::after {
   content: "";
@@ -55,7 +55,7 @@ html::after {
   align-items: center;
   justify-content: center; */
   display: block;
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   text-align: center;
   margin-bottom: 1.5rem;
   padding: 0 1.5rem;
@@ -88,24 +88,28 @@ p {
 input[type="email"],
 #dropdown {
   outline: none;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 5px;
+  margin-bottom: 8px;
   width: 100%;
-  height: 40px;
+  height: 30px;
   color: var(--secondary);
   border-radius: 10px;
 }
-
+.form-container #radio,
+#checkbox {
+  padding: 5px;
+}
 .form-container textarea {
-  margin-top: 20px;
+  margin-top: 10px;
   padding: 0.5rem;
   outline: none;
   border-radius: 10px;
   width: 100%;
+  height: 100px;
 }
 .form-container button {
   width: 50%;
-  height: 3rem;
+  height: 2rem;
   text-transform: uppercase;
   color: var(--header2);
   font-weight: 800;
@@ -114,7 +118,7 @@ input[type="email"],
   cursor: pointer;
   box-shadow: 5px 4px 15px var(--button);
   border-radius: 20px;
-  margin-top: 20px;
+  margin-top: 10px;
   background-color: var(--button);
   position: relative;
 }
@@ -123,11 +127,11 @@ input[type="email"],
   content: "";
   display: block;
   position: absolute;
-  top: -20px;
-  left: -100px;
+  top: -2px;
+  left: -130px;
   background: #fff;
-  width: 20px;
-  height: 75px;
+  width: 10px;
+  height: 30px;
   opacity: 40%;
   transform: rotate(-45deg);
 }
